--- a/pom.xml
+++ b/pom.xml
@@ -47,12 +47,12 @@
 			<scope>test</scope>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
-		<dependency>
+	<!--	<dependency>
 		    <groupId>org.apache.logging.log4j</groupId>
 		    <artifactId>log4j-core</artifactId>
 		    <version>2.23.1</version>
 		</dependency>
-
+-->
 
 
 
